--- a/Admin2/.classpath
+++ b/Admin2/.classpath
@@ -6,10 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/app/Downloads/Downloads/jar_files (1)/mongo-java-driver-3.12.11.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="D:/source/Java/KLTPChat/Admin2/mongo-java-driver-3.12.11.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
