--- a/Admin2/.classpath
+++ b/Admin2/.classpath
@@ -2,9 +2,16 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry excluding="src/" kind="src" path=""/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="D:/source/Java/KLTPChat/Admin2/gson-2.10.jar"/>
 	<classpathentry kind="lib" path="D:/source/Java/KLTPChat/Admin2/jcalendar-1.4.jar"/>
 	<classpathentry kind="lib" path="D:/source/Java/KLTPChat/Admin2/mongo-java-driver-3.12.11.jar"/>
+	<classpathentry kind="lib" path="/Users/trandungtien/Desktop/Java/Project/KLTPChat/Admin2/gson-2.10.jar"/>
+	<classpathentry kind="lib" path="/Users/trandungtien/Desktop/Java/Project/KLTPChat/Admin2/jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="/Users/trandungtien/Desktop/Java/Project/KLTPChat/Admin2/mongo-java-driver-3.12.11.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
