--- a/Admin2/.classpath
+++ b/Admin2/.classpath
@@ -7,11 +7,8 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/source/Java/KLTPChat/Admin2/gson-2.10.jar"/>
-	<classpathentry kind="lib" path="D:/source/Java/KLTPChat/Admin2/jcalendar-1.4.jar"/>
-	<classpathentry kind="lib" path="D:/source/Java/KLTPChat/Admin2/mongo-java-driver-3.12.11.jar"/>
-	<classpathentry kind="lib" path="/Users/trandungtien/Desktop/Java/Project/KLTPChat/Admin2/gson-2.10.jar"/>
-	<classpathentry kind="lib" path="/Users/trandungtien/Desktop/Java/Project/KLTPChat/Admin2/jcalendar-1.4.jar"/>
-	<classpathentry kind="lib" path="/Users/trandungtien/Desktop/Java/Project/KLTPChat/Admin2/mongo-java-driver-3.12.11.jar"/>
+	<classpathentry kind="lib" path="gson-2.10.jar"/>
+	<classpathentry kind="lib" path="jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="mongo-java-driver-3.12.11.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
