--- a/Admin2/bin/.gitignore
+++ b/Admin2/bin/.gitignore
@@ -1,3 +1,10 @@
+/.DS_Store
+/.classpath
+/.project
+/.settings/
 /AdminInterfaces/
-/Server/
 /Image/
+/Server/
+/gson-2.10.jar
+/jcalendar-1.4.jar
+/mongo-java-driver-3.12.11.jar
