--- a/Admin2/bin/.classpath
+++ b/Admin2/bin/.classpath
@@ -10,5 +10,7 @@
 	<classpathentry kind="lib" path="gson-2.10.jar"/>
 	<classpathentry kind="lib" path="jcalendar-1.4.jar"/>
 	<classpathentry kind="lib" path="mongo-java-driver-3.12.11.jar"/>
+	<classpathentry kind="lib" path="src/lib/jakarta.activation-2.0.1.jar"/>
+	<classpathentry kind="lib" path="src/lib/jakarta.mail-2.0.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
