--- a/Client/.classpath
+++ b/Client/.classpath
@@ -11,7 +11,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/source/Java/KLTPChat/Client/jcalendar-1.4.jar"/>
-	<classpathentry kind="lib" path="D:/source/Java/KLTPChat/Client/jgoodies-common-1.2.0.jar"/>
+	<classpathentry kind="lib" path="/Users/trandungtien/Desktop/Java/jcalendar-1/lib/jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="/Users/trandungtien/Desktop/Java/jcalendar-1/lib/jgoodies-common-1.2.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
