--- a/Client/.classpath
+++ b/Client/.classpath
@@ -6,12 +6,15 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="jcalendar-1.4.jar">
+	<classpathentry kind="lib" path="src/lib/jcalendar-1.4.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Users/trandungtien/Desktop/Java/jcalendar-1/lib/jcalendar-1.4.jar"/>
-	<classpathentry kind="lib" path="/Users/trandungtien/Desktop/Java/jcalendar-1/lib/jgoodies-common-1.2.0.jar"/>
+	<classpathentry kind="lib" path="src/lib/jgoodies-common-1.2.0.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
